not wrapping at the correct place

--- a/04flexbox/style.css
+++ b/04flexbox/style.css
@@ -13,22 +13,24 @@ main .article{
 }
 
 .photo{
-    display: flex;
-    justify-content: center;
     margin: 5px;
 }
 
 .text-container{
     display: flex;
-    width: 500px;
     flex-direction: column;
     align-items: stretch;
     justify-content: space-between;
+    min-width: 150px;
+    flex: 0 0 40%;
 }
 
 .description{
+    display: flex;
     align-items: stretch;
     flex-basis: inherit;
+    flex-wrap: wrap;
+    
 }
 
 .fun-container{
